Parse tree visualization

--- a/net.certiv.adept.vis/.classpath
+++ b/net.certiv.adept.vis/.classpath
@@ -16,6 +16,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.certiv.adept.core"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
