--- a/net.certiv.adept.vis/pom.xml
+++ b/net.certiv.adept.vis/pom.xml
@@ -10,10 +10,9 @@
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>net.certiv.adept.vis</artifactId>
+	<artifactId>adept.vis</artifactId>
 
-
-	<name>Adept</name>
+	<name>net.certiv.adept.vis</name>
 	<description>Adept code formatter</description>
 	<organization>
 		<name>Certiv Analytics</name>
@@ -27,6 +26,12 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4</artifactId>
+			<version>4.5.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>net.sf.jung</groupId>
