Feature topology working.

--- a/net.certiv.adept.vis/.classpath
+++ b/net.certiv.adept.vis/.classpath
@@ -16,7 +16,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="resources"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/net.certiv.adept.core"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
