--- a/net.certiv.adept.vis/pom.xml
+++ b/net.certiv.adept.vis/pom.xml
@@ -54,6 +54,18 @@
 			<version>2.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.googlecode.java-diff-utils</groupId>
+			<artifactId>diffutils</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.jgoodies</groupId>
+			<artifactId>jgoodies-forms</artifactId>
+			<version>1.8.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
