--- a/net.certiv.adept.core/resources/settings.json
+++ b/net.certiv.adept.core/resources/settings.json
@@ -1,4 +1,15 @@
 {
+	"backup": "true",
+	"check": "false",
+	"format": "true",
+	"learn": "false",
+	"rebuild": "false",
+	"save": "false",
+	"corpusRoot": null,
+	"lang": null,
+	"output": null,
+	"trust": "3",
+	"verbose": "warn",
 	"tabWidth": "4",
 	"useTabs": "true",
 	"removeBlankLines": "true",
