--- a/net.certiv.adept.vis/pom.xml
+++ b/net.certiv.adept.vis/pom.xml
@@ -33,6 +33,9 @@
 			<version>4.5.3</version>
 		</dependency>
 
+		<!-- <dependency> <groupId>org.knowm.xchart</groupId> <artifactId>xchart</artifactId> 
+			<version>3.2.2</version> </dependency> -->
+
 		<dependency>
 			<groupId>net.sf.jung</groupId>
 			<artifactId>jung-api</artifactId>
