--- a/net.certiv.adept.vis/.project
+++ b/net.certiv.adept.vis/.project
@@ -3,6 +3,7 @@
 	<name>net.certiv.adept.vis</name>
 	<comment></comment>
 	<projects>
+		<project>net.certiv.adept.core</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
