--- a/net.certiv.adept/pom.xml
+++ b/net.certiv.adept/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -29,7 +30,7 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.7</version>
+			<version>4.7.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
@@ -42,6 +43,9 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.2</version>
 		</dependency>
+
+		<!-- <dependency> <groupId>net.certiv</groupId> <artifactId>xvisitor</artifactId> 
+			<version>4.7</version> </dependency> -->
 
 		<!-- <dependency> <groupId>org.apache.commons</groupId> <artifactId>commons-math3</artifactId> 
 			<version>3.6</version> </dependency> -->
