--- a/net.certiv.adept.vis/pom.xml
+++ b/net.certiv.adept.vis/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.certiv</groupId>
 		<artifactId>adept.parent</artifactId>
-		<version>0.3.0</version>
+		<version>0.3.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>adept.vis</artifactId>
