--- a/net.certiv.adept.test/.project
+++ b/net.certiv.adept.test/.project
@@ -7,12 +7,12 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>net.certiv.xvisitordt.core.builder</name>
+			<name>net.certiv.xvisitor.dt.core.builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>net.certiv.antlrdt.core.builder</name>
+			<name>net.certiv.antlr.dt.core.builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -30,7 +30,7 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
-		<nature>net.certiv.antlrdt.core.nature</nature>
-		<nature>net.certiv.xvisitordt.core.nature</nature>
+		<nature>net.certiv.antlr.dt.core.nature</nature>
+		<nature>net.certiv.xvisitor.dt.core.nature</nature>
 	</natures>
 </projectDescription>
