--- a/net.certiv.adept/.project
+++ b/net.certiv.adept/.project
@@ -6,17 +6,17 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>net.certiv.stdt.core.builder</name>
+			<name>net.certiv.st.dt.core.builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>net.certiv.xvisitordt.core.builder</name>
+			<name>net.certiv.xvisitor.dt.core.builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>net.certiv.antlrdt.core.builder</name>
+			<name>net.certiv.antlr.dt.core.builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -34,8 +34,8 @@
 	<natures>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>net.certiv.antlrdt.core.nature</nature>
-		<nature>net.certiv.xvisitordt.core.nature</nature>
-		<nature>net.certiv.stdt.core.nature</nature>
+		<nature>net.certiv.antlr.dt.core.nature</nature>
+		<nature>net.certiv.xvisitor.dt.core.nature</nature>
+		<nature>net.certiv.st.dt.core.nature</nature>
 	</natures>
 </projectDescription>
